--- a/css/less/base.less
+++ b/css/less/base.less
@@ -4,6 +4,9 @@
  * ----------------------------------------------------------------------------
  */
 
+* {
+  box-sizing: border-box;
+}
 
 /*! normalize.css v6.0.0 | MIT License | github.com/necolas/normalize.css */
 
@@ -431,4 +434,71 @@ template {
 
 [hidden] {
   display: none;
+}
+
+
+
+/**
+ * General Styles
+ */
+body {
+  font: 300 14px/1.5em Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+
+  color: #333;
+}
+
+p {
+  margin-bottom: 1.5em;
+
+  a {
+    text-decoration: none;
+  }
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-bottom: 21px;
+
+  font-weight: normal;
+}
+
+h1 {
+  font-style: 3.375em;
+}
+
+h2 {
+  font-size: 2.25em;
+}
+
+h3 {
+  font-size: 1.5em;
+}
+
+h4 {
+  font-size: 1em;
+  font-weight: bold;
+}
+
+h5 {
+  font-size: .667em;
+}
+
+h6 {
+  font-size: .444em;
+}
+
+blockquote {
+  margin: 0;
+
+  cite {
+    display: block;
+    margin-top: 1.5em;
+
+    font-style: normal;
+  }
 }
