Clear body margin to 0 in base.less

--- a/css/less/base.less
+++ b/css/less/base.less
@@ -8,6 +8,10 @@
   box-sizing: border-box;
 }
 
+body {
+  margin: 0;
+}
+
 /*! normalize.css v6.0.0 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
