--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,9 @@
 * {
   box-sizing: border-box;
 }
+body {
+  margin: 0;
+}
 /*! normalize.css v6.0.0 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
