Add styles for contact info into module.less

--- a/css/less/module.less
+++ b/css/less/module.less
@@ -32,3 +32,16 @@
 .stumbleupon {
   background: transparent url(../img/social/stumbleupon.png) 0 0 no-repeat;
 }
+
+
+
+
+/* Contact Info */
+.contact-info {
+  margin-left: 1.5em;
+
+  p {
+    margin: 0;
+    font-size: 18px;
+  }
+}
