--- a/css/styles.css
+++ b/css/styles.css
@@ -560,3 +560,25 @@ blockquote cite {
   margin: 0;
   font-size: 18px;
 }
+/* Price Box */
+.bordered-box {
+  border: 5px solid #f4f6f7;
+  border-radius: 10px;
+}
+.bordered-box-content {
+  padding: 1.5em;
+}
+.price-box {
+  background-color: #fff;
+  font-size: 18px;
+  text-align: center;
+}
+.price-box .bordered-box-content {
+  padding: 0 1.5em;
+}
+.price-box .price-box-footer {
+  padding: 1em 1.5em;
+  background-color: #2b333d;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
