Add styles for buttons into module.less

--- a/css/less/module.less
+++ b/css/less/module.less
@@ -78,3 +78,26 @@
     border-bottom-left-radius: 10px;
   }
 }
+
+
+
+
+/* Buttons */
+.button {
+  display: inline-block;
+  padding: .75em 1.5em;
+
+  border-radius: 5px;
+
+  font-weight: bold;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+.primary {
+  font-size: 18px;
+}
+
+.secondary {
+  border: 1px solid;
+}
