--- a/css/less/module.less
+++ b/css/less/module.less
@@ -101,3 +101,16 @@
 .secondary {
   border: 1px solid;
 }
+
+
+
+
+/* HR */
+hr {
+  height: 55px;
+  margin-top: 3em;
+
+  background: transparent url(../img/horizontalSeparator.jpg) center center no-repeat;
+
+  border: none;
+}
