Add styles for testimonials and forms into module.less

--- a/css/less/module.less
+++ b/css/less/module.less
@@ -114,3 +114,36 @@ hr {
 
   border: none;
 }
+
+
+
+
+/* Testimonials */
+.bordered-box-header {
+  padding: 1.5em;
+
+  background-color: #eff1f3;
+
+  p {
+    margin: 0;
+
+    font-weight: bold;
+  }
+}
+
+
+
+
+/* Forms */
+.custom-form {
+  input[type="text"],
+  input[type="email"],
+  textarea {
+    padding: .75em;
+
+    border: 1px solid;
+    border-radius: 5px;
+
+    outline: none;
+  }
+}
