No styles in style.less. Keep it for future use.

--- a/css/styles.css
+++ b/css/styles.css
@@ -622,3 +622,8 @@ hr {
   border-radius: 5px;
   outline: none;
 }
+/**
+ * ----------------------------------------------------------------------------
+ * State Styles
+ * ----------------------------------------------------------------------------
+ */
